# gha-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
gha_tools/: __main__.py  action_updater.py  cli.py  github_api.py
tests/: test_autoupdate.py
tests/autoupdate_victim/: victim.yml
